--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ install:
   - pip install toposort imblearn sklearn pandas numpy
   - pip install pydot graphviz dask matplotlib tqdm psutil
   - pip install attrs ipywidgets
+  - pip install git+https://github.com/Morgan243/InteractiveDataTree.git
 script:
   - nosetests --with-coverage --cover-package=dsdag
 after_success: coveralls
