--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ install:
   - pip install pydot graphviz dask matplotlib tqdm psutil
   - pip install attrs ipywidgets
   - pip install git+https://github.com/Morgan243/InteractiveDataTree.git
+  - pip install git+https://github.com/Morgan243/DSDAG.git
 script:
   - nosetests --with-coverage --cover-package=dsdag
 after_success: coveralls
