--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,9 @@ python:
   - "3.7"
 install:
   - python setup.py install
+  - pip install pytest
+  - pip install pytest-cov
+  - pip install coveralls
   - pip install toposort imblearn sklearn pandas numpy
   - pip install pydot graphviz dask matplotlib tqdm psutil
   - pip install attrs ipywidgets
